@@ -5,13 +5,11 @@ import java.util.Collection;
 import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
-import java.util.Map;
 import java.util.Set;
 import java.util.function.Consumer;
 import java.util.function.Function;
 import java.util.function.Predicate;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
 
 import javax.annotation.Nonnull;
 import javax.annotation.ParametersAreNonnullByDefault;
@@ -71,6 +69,7 @@ import com.simibubi.create.foundation.gui.menu.AbstractSimiContainerScreen;
 import com.simibubi.create.foundation.item.ItemHelper;
 import com.simibubi.create.foundation.recipe.IRecipeTypeInfo;
 import com.simibubi.create.foundation.utility.CreateLang;
+import com.simibubi.create.foundation.utility.RecipeGenericsUtil;
 import com.simibubi.create.infrastructure.config.AllConfigs;
 import com.simibubi.create.infrastructure.config.CRecipes;
 
@@ -80,6 +79,7 @@ import mezz.jei.api.constants.RecipeTypes;
 import mezz.jei.api.fabric.constants.FabricTypes;
 import mezz.jei.api.gui.drawable.IDrawable;
 import mezz.jei.api.helpers.IPlatformFluidHelper;
+import mezz.jei.api.neoforge.NeoForgeTypes;
 import mezz.jei.api.recipe.category.IRecipeCategory;
 import mezz.jei.api.registration.IExtraIngredientRegistration;
 import mezz.jei.api.registration.IGuiHandlerRegistration;
@@ -91,18 +91,25 @@ import mezz.jei.api.registration.ISubtypeRegistration;
 import mezz.jei.api.runtime.IIngredientManager;
 import mezz.jei.fabric.ingredients.fluid.JeiFluidIngredient;
 import net.createmod.catnip.config.ConfigBase;
+
+import net.fabricmc.fabric.api.transfer.v1.fluid.FluidConstants;
+
 import net.minecraft.client.Minecraft;
-import net.minecraft.core.IdMap;
+import net.minecraft.core.Holder;
+import net.minecraft.core.Holder.Reference;
 import net.minecraft.core.RegistryAccess;
-import net.minecraft.core.registries.BuiltInRegistries;
+import net.minecraft.core.registries.Registries;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.world.effect.MobEffect;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.Items;
 import net.minecraft.world.item.alchemy.Potion;
+import net.minecraft.world.item.alchemy.PotionContents;
 import net.minecraft.world.item.crafting.AbstractCookingRecipe;
 import net.minecraft.world.item.crafting.CraftingRecipe;
 import net.minecraft.world.item.crafting.Recipe;
+import net.minecraft.world.item.crafting.RecipeHolder;
+import net.minecraft.world.item.crafting.RecipeInput;
 import net.minecraft.world.item.crafting.RecipeType;
 import net.minecraft.world.item.crafting.ShapedRecipe;
 import net.minecraft.world.item.crafting.SmokingRecipe;
@@ -191,10 +198,10 @@ public class CreateJEI implements IModPlugin {
 
 		autoShapeless = builder(BasinRecipe.class)
 				.enableWhen(c -> c.allowShapelessInMixer)
-				.addAllRecipesIf(r -> r instanceof CraftingRecipe && !(r instanceof ShapedRecipe)
-								&& r.getIngredients()
+				.addAllRecipesIf(r -> r.value() instanceof CraftingRecipe && !(r.value() instanceof ShapedRecipe)
+								&& r.value().getIngredients()
 								.size() > 1
-								&& !MechanicalPressBlockEntity.canCompress(r) && !AllRecipeTypes.shouldIgnoreInAutomation(r),
+								&& !MechanicalPressBlockEntity.canCompress(r.value()) && !AllRecipeTypes.shouldIgnoreInAutomation(r),
 						BasinRecipe::convertShapeless)
 				.catalyst(AllBlocks.MECHANICAL_MIXER::get)
 				.catalyst(AllBlocks.BASIN::get)
@@ -204,7 +211,7 @@ public class CreateJEI implements IModPlugin {
 
 		brewing = builder(BasinRecipe.class)
 				.enableWhen(c -> c.allowBrewingInMixer)
-				.addRecipes(() -> PotionMixingRecipes.ALL)
+				.addRecipes(() -> RecipeGenericsUtil.cast(PotionMixingRecipes.createRecipes(Minecraft.getInstance().level)))
 				.catalyst(AllBlocks.MECHANICAL_MIXER::get)
 				.catalyst(AllBlocks.BASIN::get)
 				.doubleItemIcon(AllBlocks.MECHANICAL_MIXER.get(), Blocks.BREWING_STAND)
@@ -222,8 +229,8 @@ public class CreateJEI implements IModPlugin {
 		autoSquare = builder(BasinRecipe.class)
 				.enableWhen(c -> c.allowShapedSquareInPress)
 				.addAllRecipesIf(
-						r -> (r instanceof CraftingRecipe) && !(r instanceof MechanicalCraftingRecipe)
-								&& MechanicalPressBlockEntity.canCompress(r) && !AllRecipeTypes.shouldIgnoreInAutomation(r),
+						r -> (r.value() instanceof CraftingRecipe) && !(r.value() instanceof MechanicalCraftingRecipe)
+								&& MechanicalPressBlockEntity.canCompress(r.value()) && !AllRecipeTypes.shouldIgnoreInAutomation(r),
 						BasinRecipe::convertShapeless)
 				.catalyst(AllBlocks.MECHANICAL_PRESS::get)
 				.catalyst(AllBlocks.BASIN::get)
@@ -256,7 +263,7 @@ public class CreateJEI implements IModPlugin {
 
 		item_application = builder(ItemApplicationRecipe.class)
 				.addTypedRecipes(AllRecipeTypes.ITEM_APPLICATION)
-				.addRecipes(LogStrippingFakeRecipes::createRecipes)
+				.addRecipes(() -> RecipeGenericsUtil.cast(LogStrippingFakeRecipes.createRecipes()))
 				.itemIcon(AllItems.BRASS_HAND.get())
 				.emptyBackground(177, 60)
 				.build("item_application", ItemApplicationCategory::new),
@@ -291,12 +298,12 @@ public class CreateJEI implements IModPlugin {
 
 		autoShaped = builder(CraftingRecipe.class)
 				.enableWhen(c -> c.allowRegularCraftingInCrafter)
-				.addAllRecipesIf(r -> r instanceof CraftingRecipe && !(r instanceof ShapedRecipe)
-						&& r.getIngredients()
+				.addAllRecipesIf(r -> r.value() instanceof CraftingRecipe && !(r.value() instanceof ShapedRecipe)
+						&& r.value().getIngredients()
 						.size() == 1
 						&& !AllRecipeTypes.shouldIgnoreInAutomation(r))
 				.addTypedRecipesIf(() -> RecipeType.CRAFTING,
-						recipe -> recipe instanceof ShapedRecipe && !AllRecipeTypes.shouldIgnoreInAutomation(recipe))
+						recipe -> recipe.value() instanceof ShapedRecipe && !AllRecipeTypes.shouldIgnoreInAutomation(recipe))
 				.catalyst(AllBlocks.MECHANICAL_CRAFTER::get)
 				.itemIcon(AllBlocks.MECHANICAL_CRAFTER.get())
 				.emptyBackground(177, 107)
@@ -323,7 +330,7 @@ public class CreateJEI implements IModPlugin {
 
 	}
 
-	private <T extends Recipe<?>> CategoryBuilder<T> builder(Class<? extends T> recipeClass) {
+	private <T extends Recipe<? extends RecipeInput>> CategoryBuilder<T> builder(Class<T> recipeClass) {
 		return new CategoryBuilder<>(recipeClass);
 	}
 
@@ -380,24 +387,32 @@ public class CreateJEI implements IModPlugin {
 
 	@Override
 	public void registerExtraIngredients(IExtraIngredientRegistration registration) {
-		IdMap<Potion> potions = BuiltInRegistries.POTION;
+		RegistryAccess registryAccess = Minecraft.getInstance().level.registryAccess();
+		List<Reference<Potion>> potions = registryAccess.lookupOrThrow(Registries.POTION)
+			.listElements()
+			.toList();
 		Collection<FluidStack> potionFluids = new ArrayList<>(potions.size() * 3);
-		Set<Set<MobEffect>> visitedEffects = new HashSet<>();
-		for (Potion potion : potions) {
+		Set<Set<Holder<MobEffect>>> visitedEffects = new HashSet<>();
+		for (Reference<Potion> potion : potions) {
 			// @goshante: Ingame potion fluids always have Bottle tag that specifies
 			// to what bottle type this potion belongs
 			// Potion fluid without this tag wouldn't be recognized by other mods
 
 //			for (PotionFluid.BottleType bottleType : PotionFluid.BottleType.values()) {
-//				FluidStack potionFluid = PotionFluid.of(1000, potion, bottleType);
+//				FluidStack potionFluid = PotionFluid.of(1000, new PotionContents(potion), bottleType);
 //				potionFluids.add(potionFluid);
 //			}
 
-			if (!potion.getEffects().isEmpty())
-				if (!visitedEffects.add(potion.getEffects().stream().map(mei -> mei.getEffect()).collect(Collectors.toSet())))
-					continue;
+			PotionContents potionContents = new PotionContents(potion);
 
-			potionFluids.add(PotionFluid.of(1000, potion, PotionFluid.BottleType.REGULAR));
+			if (potionContents.hasEffects()) {
+				Set<Holder<MobEffect>> effectSet = new HashSet<>();
+				potionContents.forEachEffect(mei -> effectSet.add(mei.getEffect()));
+				if (!visitedEffects.add(effectSet))
+					continue;
+			}
+
+			potionFluids.add(PotionFluid.of(FluidConstants.BUCKET, potionContents, PotionFluid.BottleType.REGULAR));
 		}
 		registration.addExtraIngredients(FabricTypes.FLUID_STACK, CreateRecipeCategory.toJei(potionFluids));
 	}
@@ -415,14 +430,14 @@ public class CreateJEI implements IModPlugin {
 		registration.addGhostIngredientHandler(FactoryPanelSetItemScreen.class, new GhostIngredientHandler());
 	}
 
-	private class CategoryBuilder<T extends Recipe<?>> {
+	private class CategoryBuilder<T extends Recipe<? extends RecipeInput>> {
 		private final Class<? extends T> recipeClass;
 		private Predicate<CRecipes> predicate = cRecipes -> true;
 
 		private IDrawable background;
 		private IDrawable icon;
 
-		private final List<Consumer<List<T>>> recipeListConsumers = new ArrayList<>();
+		private final List<Consumer<List<RecipeHolder<T>>>> recipeListConsumers = new ArrayList<>();
 		private final List<Supplier<? extends ItemStack>> catalysts = new ArrayList<>();
 
 		public CategoryBuilder(Class<? extends T> recipeClass) {
@@ -439,24 +454,24 @@ public class CreateJEI implements IModPlugin {
 			return this;
 		}
 
-		public CategoryBuilder<T> addRecipeListConsumer(Consumer<List<T>> consumer) {
+		public CategoryBuilder<T> addRecipeListConsumer(Consumer<List<RecipeHolder<T>>> consumer) {
 			recipeListConsumers.add(consumer);
 			return this;
 		}
 
-		public CategoryBuilder<T> addRecipes(Supplier<Collection<? extends T>> collection) {
+		public CategoryBuilder<T> addRecipes(Supplier<Collection<? extends RecipeHolder<T>>> collection) {
 			return addRecipeListConsumer(recipes -> recipes.addAll(collection.get()));
 		}
 
 		@SuppressWarnings("unchecked")
-		public CategoryBuilder<T> addAllRecipesIf(Predicate<Recipe<?>> pred) {
-			return addRecipeListConsumer(recipes -> consumeAllRecipes(recipe -> {
+		public CategoryBuilder<T> addAllRecipesIf(Predicate<RecipeHolder<T>> pred) {
+			return addRecipeListConsumer(recipes -> consumeAllRecipesOfType(recipe -> {
 				if (pred.test(recipe))
-					recipes.add((T) recipe);
+					recipes.add(recipe);
 			}));
 		}
 
-		public CategoryBuilder<T> addAllRecipesIf(Predicate<Recipe<?>> pred, Function<Recipe<?>, T> converter) {
+		public CategoryBuilder<T> addAllRecipesIf(Predicate<RecipeHolder<?>> pred, Function<RecipeHolder<?>, RecipeHolder<T>> converter) {
 			return addRecipeListConsumer(recipes -> consumeAllRecipes(recipe -> {
 				if (pred.test(recipe)) {
 					recipes.add(converter.apply(recipe));
@@ -467,17 +482,20 @@ public class CreateJEI implements IModPlugin {
 		public CategoryBuilder<T> addTypedRecipes(IRecipeTypeInfo recipeTypeEntry) {
 			return addTypedRecipes(recipeTypeEntry::getType);
 		}
-
-		public CategoryBuilder<T> addTypedRecipes(Supplier<RecipeType<? extends T>> recipeType) {
-			return addRecipeListConsumer(recipes -> CreateJEI.<T>consumeTypedRecipes(recipes::add, recipeType.get()));
+		public <I extends RecipeInput, R extends Recipe<I>> CategoryBuilder<T> addTypedRecipes(Supplier<RecipeType<R>> recipeType) {
+			return addRecipeListConsumer(recipes -> CreateJEI.<T>consumeTypedRecipes(recipe -> {
+				if (recipeClass.isInstance(recipe.value()))
+					//noinspection unchecked - checked by if statement above
+					recipes.add((RecipeHolder<T>) recipe);
+			}, recipeType.get()));
 		}
 
-		public CategoryBuilder<T> addTypedRecipes(Supplier<RecipeType<? extends T>> recipeType, Function<Recipe<?>, T> converter) {
+		public CategoryBuilder<T> addTypedRecipes(Supplier<RecipeType<T>> recipeType, Function<RecipeHolder<?>, RecipeHolder<T>> converter) {
 			return addRecipeListConsumer(recipes -> CreateJEI.<T>consumeTypedRecipes(recipe -> recipes.add(converter.apply(recipe)), recipeType.get()));
 		}
 
-		public CategoryBuilder<T> addTypedRecipesIf(Supplier<RecipeType<? extends T>> recipeType, Predicate<Recipe<?>> pred) {
-			return addRecipeListConsumer(recipes -> CreateJEI.<T>consumeTypedRecipes(recipe -> {
+		public CategoryBuilder<T> addTypedRecipesIf(Supplier<RecipeType<? extends T>> recipeType, Predicate<RecipeHolder<?>> pred) {
+			return addRecipeListConsumer(recipes -> consumeTypedRecipesTyped(recipe -> {
 				if (pred.test(recipe)) {
 					recipes.add(recipe);
 				}
@@ -487,10 +505,10 @@ public class CreateJEI implements IModPlugin {
 		public CategoryBuilder<T> addTypedRecipesExcluding(Supplier<RecipeType<? extends T>> recipeType,
 			Supplier<RecipeType<? extends T>> excluded) {
 			return addRecipeListConsumer(recipes -> {
-				List<Recipe<?>> excludedRecipes = getTypedRecipes(excluded.get());
-				CreateJEI.<T>consumeTypedRecipes(recipe -> {
-					for (Recipe<?> excludedRecipe : excludedRecipes) {
-						if (doInputsMatch(recipe, excludedRecipe)) {
+				List<RecipeHolder<?>> excludedRecipes = getTypedRecipes(excluded.get());
+				consumeTypedRecipesTyped(recipe -> {
+					for (RecipeHolder<?> excludedRecipe : excludedRecipes) {
+						if (doInputsMatch(recipe.value(), excludedRecipe.value())) {
 							return;
 						}
 					}
@@ -501,10 +519,10 @@ public class CreateJEI implements IModPlugin {
 
 		public CategoryBuilder<T> removeRecipes(Supplier<RecipeType<? extends T>> recipeType) {
 			return addRecipeListConsumer(recipes -> {
-				List<Recipe<?>> excludedRecipes = getTypedRecipes(recipeType.get());
+				List<RecipeHolder<?>> excludedRecipes = getTypedRecipes(recipeType.get());
 				recipes.removeIf(recipe -> {
-					for (Recipe<?> excludedRecipe : excludedRecipes)
-						if (doInputsMatch(recipe, excludedRecipe) && doOutputsMatch(recipe, excludedRecipe))
+					for (RecipeHolder<?> excludedRecipe : excludedRecipes)
+						if (doInputsMatch(recipe.value(), excludedRecipe.value()) && doOutputsMatch(recipe.value(), excludedRecipe.value()))
 							return true;
 					return false;
 				});
@@ -551,16 +569,16 @@ public class CreateJEI implements IModPlugin {
 		}
 
 		public CreateRecipeCategory<T> build(String name, CreateRecipeCategory.Factory<T> factory) {
-			Supplier<List<T>> recipesSupplier;
+			Supplier<List<RecipeHolder<T>>> recipesSupplier;
 			if (predicate.test(AllConfigs.server().recipes)) {
 				recipesSupplier = () -> {
-					List<T> recipes = new ArrayList<>();
-					for (Consumer<List<T>> consumer : recipeListConsumers)
+					List<RecipeHolder<T>> recipes = new ArrayList<>();
+					for (Consumer<List<RecipeHolder<T>>> consumer : recipeListConsumers)
 						consumer.accept(recipes);
 					return recipes;
 				};
 			} else {
-				recipesSupplier = () -> Collections.emptyList();
+				recipesSupplier = Collections::emptyList;
 			}
 
 			CreateRecipeCategory.Info<T> info = new CreateRecipeCategory.Info<>(
@@ -570,9 +588,27 @@ public class CreateJEI implements IModPlugin {
 			allCategories.add(category);
 			return category;
 		}
+
+		private void consumeAllRecipesOfType(Consumer<RecipeHolder<T>> consumer) {
+			consumeAllRecipes(recipeHolder -> {
+				if (recipeClass.isInstance(recipeHolder.value())) {
+					//noinspection unchecked - this is checked by the if statement
+					consumer.accept((RecipeHolder<T>) recipeHolder);
+				}
+			});
+		}
+
+		private void consumeTypedRecipesTyped(Consumer<RecipeHolder<T>> consumer, RecipeType<?> type) {
+			consumeTypedRecipes(recipeHolder -> {
+				if (recipeClass.isInstance(recipeHolder.value())) {
+					//noinspection unchecked - this is checked by the if statement
+					consumer.accept((RecipeHolder<T>) recipeHolder);
+				}
+			}, type);
+		}
 	}
 
-	public static void consumeAllRecipes(Consumer<Recipe<?>> consumer) {
+	public static void consumeAllRecipes(Consumer<? super RecipeHolder<?>> consumer) {
 		Minecraft.getInstance()
 			.getConnection()
 			.getRecipeManager()
@@ -580,23 +616,23 @@ public class CreateJEI implements IModPlugin {
 			.forEach(consumer);
 	}
 
-	@SuppressWarnings("unchecked")
-	public static <T extends Recipe<?>> void consumeTypedRecipes(Consumer<T> consumer, RecipeType<?> type) {
-		Map<ResourceLocation, Recipe<?>> map = ((RecipeManagerAccessor) Minecraft.getInstance()
+	@SuppressWarnings({"unchecked", "rawtypes"})
+	public static <T extends Recipe<?>> void consumeTypedRecipes(Consumer<RecipeHolder<?>> consumer, RecipeType<?> type) {
+		List<? extends RecipeHolder<?>> map = Minecraft.getInstance()
 			.getConnection()
-			.getRecipeManager()).port_lib$getRecipes().get(type);
-		if (map != null)
-			map.values().forEach(recipe -> consumer.accept((T) recipe));
+			.getRecipeManager().getAllRecipesFor((RecipeType) type);
+		if (!map.isEmpty())
+			map.forEach(consumer);
 	}
 
-	public static List<Recipe<?>> getTypedRecipes(RecipeType<?> type) {
-		List<Recipe<?>> recipes = new ArrayList<>();
+	public static List<RecipeHolder<?>> getTypedRecipes(RecipeType<?> type) {
+		List<RecipeHolder<?>> recipes = new ArrayList<>();
 		consumeTypedRecipes(recipes::add, type);
 		return recipes;
 	}
 
-	public static List<Recipe<?>> getTypedRecipesExcluding(RecipeType<?> type, Predicate<Recipe<?>> exclusionPred) {
-		List<Recipe<?>> recipes = getTypedRecipes(type);
+	public static List<RecipeHolder<?>> getTypedRecipesExcluding(RecipeType<?> type, Predicate<RecipeHolder<?>> exclusionPred) {
+		List<RecipeHolder<?>> recipes = getTypedRecipes(type);
 		recipes.removeIf(exclusionPred);
 		return recipes;
 	}
@@ -609,13 +645,13 @@ public class CreateJEI implements IModPlugin {
 			return false;
 		}
 		ItemStack[] matchingStacks = recipe1.getIngredients()
-			.get(0)
+			.getFirst()
 			.getItems();
 		if (matchingStacks.length == 0) {
 			return false;
 		}
 		return recipe2.getIngredients()
-				.get(0)
+				.getFirst()
 				.test(matchingStacks[0]);
 	}
 
