@@ -8,9 +8,12 @@ import java.util.UUID;
 
 import javax.annotation.Nullable;
 
-import org.apache.commons.lang3.mutable.MutableBoolean;
+import io.github.fabricators_of_create.porting_lib.util.MinecartAndRailUtil;
 
-import com.simibubi.create.AllPackets;
+import org.apache.commons.lang3.mutable.MutableBoolean;
+import org.jetbrains.annotations.NotNull;
+
+import com.mojang.serialization.Codec;
 import com.simibubi.create.Create;
 import com.simibubi.create.content.contraptions.AbstractContraptionEntity;
 import com.simibubi.create.content.contraptions.OrientedContraptionEntity;
@@ -18,14 +21,18 @@ import com.simibubi.create.content.contraptions.minecart.CouplingHandler;
 
 import net.createmod.catnip.data.Couple;
 import net.createmod.catnip.data.Iterate;
+import net.createmod.catnip.lang.Lang;
 import net.createmod.catnip.math.VecHelper;
 import net.createmod.catnip.nbt.NBTHelper;
+import net.createmod.catnip.platform.CatnipServices;
 import net.minecraft.core.BlockPos;
+import net.minecraft.core.HolderLookup;
 import net.minecraft.nbt.CompoundTag;
 import net.minecraft.nbt.NbtUtils;
 import net.minecraft.nbt.Tag;
 import net.minecraft.tags.BlockTags;
 import net.minecraft.util.Mth;
+import net.minecraft.util.StringRepresentable;
 import net.minecraft.world.entity.Entity;
 import net.minecraft.world.entity.vehicle.AbstractMinecart;
 import net.minecraft.world.entity.vehicle.Minecart;
@@ -42,8 +49,10 @@ import io.github.fabricators_of_create.porting_lib.util.MinecartAndRailUtil;
  * coupled trains
  */
 public class MinecartController implements INBTSerializable<CompoundTag> {
+	public static final MinecartController EMPTY = new MinecartController.Empty();
 
-	public static MinecartController EMPTY;
+	public static final IAttachmentSerializer<CompoundTag, MinecartController> SERIALIZER = Type.SERIALIZER;
+
 	private boolean needsEntryRefresh;
 	private WeakReference<AbstractMinecart> weakRef;
 
@@ -66,9 +75,21 @@ public class MinecartController implements INBTSerializable<CompoundTag> {
 		needsEntryRefresh = true;
 	}
 
+	public final boolean isEmpty() {
+		return getType() == Type.EMPTY;
+	}
+
+	@NotNull
+	protected Type getType() {
+		return Type.NORMAL;
+	}
+
 	public void tick() {
 		AbstractMinecart cart = cart();
 		Level world = getWorld();
+
+		if (cart == null || world == null)
+			return;
 
 		if (needsEntryRefresh) {
 			CapabilityMinecartController.queuedAdditions.get(world).add(cart);
@@ -97,7 +118,7 @@ public class MinecartController implements INBTSerializable<CompoundTag> {
 			return;
 		}
 		List<Entity> passengers = cart.getPassengers();
-		if (passengers.isEmpty() || !(passengers.get(0) instanceof AbstractContraptionEntity)) {
+		if (passengers.isEmpty() || !(passengers.getFirst() instanceof AbstractContraptionEntity)) {
 			return;
 		}
 		Level world = cart.level();
@@ -155,9 +176,7 @@ public class MinecartController implements INBTSerializable<CompoundTag> {
 
 	public float getCouplingLength(boolean leading) {
 		Optional<CouplingData> optional = couplings.get(leading);
-		if (optional.isPresent())
-			return optional.get().length;
-		return 0;
+		return optional.map(couplingData -> couplingData.length).orElse(0F);
 	}
 
 	public void decouple() {
@@ -173,10 +192,10 @@ public class MinecartController implements INBTSerializable<CompoundTag> {
 	}
 
 	public void removeConnection(boolean main) {
-		if (hasContraptionCoupling(main) && !getWorld().isClientSide) {
+		if (hasContraptionCoupling(main) && getWorld() != null && !getWorld().isClientSide) {
 			List<Entity> passengers = cart().getPassengers();
 			if (!passengers.isEmpty()) {
-				Entity entity = passengers.get(0);
+				Entity entity = passengers.getFirst();
 				if (entity instanceof AbstractContraptionEntity)
 					((AbstractContraptionEntity) entity).disassemble();
 			}
@@ -196,28 +215,25 @@ public class MinecartController implements INBTSerializable<CompoundTag> {
 			boolean forward = current.isLeadingCoupling();
 			int safetyCount = 1000;
 
-			while (true) {
+			do {
 				if (safetyCount-- <= 0) {
 					Create.LOGGER.warn("Infinite loop in coupling iteration");
 					return;
 				}
 				cartsToFlip.add(current);
 				current = CouplingHandler.getNextInCouplingChain(getWorld(), current, forward);
-				if (current == null || current == MinecartController.EMPTY)
-					break;
-			}
+			} while (current != null && current != MinecartController.EMPTY);
 
 			for (MinecartController minecartController : cartsToFlip) {
-				MinecartController mc = minecartController;
-				mc.couplings.forEachWithContext((opt, leading) -> opt.ifPresent(cd -> {
+				minecartController.couplings.forEachWithContext((opt, leading) -> opt.ifPresent(cd -> {
 					cd.flip();
 					if (!cd.contraption)
 						return;
-					List<Entity> passengers = mc.cart()
+					List<Entity> passengers = minecartController.cart()
 						.getPassengers();
 					if (passengers.isEmpty())
 						return;
-					Entity entity = passengers.get(0);
+					Entity entity = passengers.getFirst();
 					if (!(entity instanceof OrientedContraptionEntity contraption))
 						return;
 					UUID couplingId = contraption.getCouplingId();
@@ -230,11 +246,11 @@ public class MinecartController implements INBTSerializable<CompoundTag> {
 						return;
 					}
 				}));
-				mc.couplings = mc.couplings.swap();
-				mc.needsEntryRefresh = true;
-				if (mc == this)
+				minecartController.couplings = minecartController.couplings.swap();
+				minecartController.needsEntryRefresh = true;
+				if (minecartController == this)
 					continue;
-				mc.sendData();
+				minecartController.sendData();
 			}
 		}
 	}
@@ -250,7 +266,7 @@ public class MinecartController implements INBTSerializable<CompoundTag> {
 	@Nullable
 	public UUID getCoupledCart(boolean asMain) {
 		Optional<CouplingData> optional = couplings.get(asMain);
-		if (!optional.isPresent())
+		if (optional.isEmpty())
 			return null;
 		CouplingData couplingData = optional.get();
 		return asMain ? couplingData.connectedCartID : couplingData.mainCartID;
@@ -273,31 +289,38 @@ public class MinecartController implements INBTSerializable<CompoundTag> {
 		if (isStalled(internal) == stall)
 			return;
 
-		AbstractMinecart cart = cart();
-		if (stall) {
+		@Nullable AbstractMinecart cart = cart();
+		if (stall && cart != null) {
 			stallData.set(internal, Optional.of(new StallData(cart)));
 			sendData();
 			return;
 		}
 
-		if (!isStalled(!internal))
+		if (!isStalled(!internal) && cart != null)
 			stallData.get(internal)
-				.get()
-				.release(cart);
+					.ifPresent(data -> data.release(cart));
 		stallData.set(internal, Optional.empty());
 
 		sendData();
 	}
 
 	public void sendData() {
-		if (getWorld().isClientSide)
+		sendData(null);
+	}
+
+	public void sendData(@Nullable AbstractMinecart cart) {
+		if (cart != null) {
+			this.weakRef = new WeakReference<>(cart);
+			needsEntryRefresh = true;
+		}
+
+		if (getWorld() == null || getWorld().isClientSide)
 			return;
-		AllPackets.getChannel().sendToClientsTracking(
-				new MinecartControllerUpdatePacket(this), this.cart());
+		CatnipServices.NETWORK.sendToClientsTrackingEntity(this.cart(), new MinecartControllerUpdatePacket(this, getWorld().registryAccess()));
 	}
 
 	@Override
-	public CompoundTag serializeNBT() {
+	public CompoundTag serializeNBT(@NotNull HolderLookup.Provider provider) {
 		CompoundTag compoundNBT = new CompoundTag();
 
 		stallData.forEachWithContext((opt, internal) -> opt
@@ -308,7 +331,7 @@ public class MinecartController implements INBTSerializable<CompoundTag> {
 	}
 
 	@Override
-	public void deserializeNBT(CompoundTag nbt) {
+	public void deserializeNBT(@NotNull HolderLookup.Provider provider, CompoundTag nbt) {
 		Optional<StallData> internalSD = Optional.empty();
 		Optional<StallData> externalSD = Optional.empty();
 		Optional<CouplingData> mainCD = Optional.empty();
@@ -336,12 +359,10 @@ public class MinecartController implements INBTSerializable<CompoundTag> {
 		return weakRef.get();
 	}
 
-	public static MinecartController empty() {
-		return EMPTY != null ? EMPTY : (EMPTY = new MinecartController(null));
-	}
-
-	private Level getWorld() {
-		return cart().getCommandSenderWorld();
+	private @Nullable Level getWorld() {
+		if (cart() == null)
+			return null;
+		return cart().level();
 	}
 
 	private static class CouplingData {
