@@ -7,17 +7,23 @@ import com.simibubi.create.AllItems;
 
 import net.createmod.catnip.gui.element.GuiGameElement;
 import net.createmod.catnip.theme.Color;
+import net.minecraft.client.DeltaTracker;
 import net.minecraft.client.Minecraft;
 import net.minecraft.client.gui.GuiGraphics;
+import net.minecraft.client.gui.LayeredDraw;
 import net.minecraft.client.player.LocalPlayer;
+import net.minecraft.core.component.DataComponents;
 import net.minecraft.network.chat.Component;
 import net.minecraft.tags.FluidTags;
 import net.minecraft.util.StringUtil;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.level.GameType;
 
-public class RemainingAirOverlay {
-	public static void render(GuiGraphics graphics, int width, int height) {
+public class RemainingAirOverlay implements LayeredDraw.Layer {
+	public static final RemainingAirOverlay INSTANCE = new RemainingAirOverlay();
+
+	@Override
+	public void render(GuiGraphics guiGraphics, DeltaTracker deltaTracker) {
 		Minecraft mc = Minecraft.getInstance();
 		if (mc.options.hideGui || mc.gameMode.getPlayerMode() == GameType.SPECTATOR)
 			return;
@@ -36,22 +42,22 @@ public class RemainingAirOverlay {
 		int timeLeft = player.getCustomData()
 			.getInt("VisualBacktankAir");
 
-		PoseStack poseStack = graphics.pose();
+		PoseStack poseStack = guiGraphics.pose();
 		poseStack.pushPose();
 
 		ItemStack backtank = getDisplayedBacktank(player);
-		poseStack.translate(width / 2 + 90, height - 53 + (backtank.getItem()
-			.isFireResistant() ? 9 : 0), 0);
+		poseStack.translate(guiGraphics.guiWidth() / 2 + 90, guiGraphics.guiHeight() - 53 + (backtank
+				.has(DataComponents.FIRE_RESISTANT) ? 9 : 0), 0);
 
-		Component text = Component.literal(StringUtil.formatTickDuration(Math.max(0, timeLeft - 1) * 20));
+		Component text = Component.literal(StringUtil.formatTickDuration(Math.max(0, timeLeft - 1) * 20, mc.level.tickRateManager().tickrate()));
 		GuiGameElement.of(backtank)
 			.at(0, 0)
-			.render(graphics);
+			.render(guiGraphics);
 		int color = 0xFF_FFFFFF;
 		if (timeLeft < 60 && timeLeft % 2 == 0) {
 			color = Color.mixColors(0xFF_FF0000, color, Math.max(timeLeft / 60f, .25f));
 		}
-		graphics.drawString(mc.font, text, 16, 5, color);
+		guiGraphics.drawString(mc.font, text, 16, 5, color);
 
 		poseStack.popPose();
 	}
@@ -59,7 +65,7 @@ public class RemainingAirOverlay {
 	public static ItemStack getDisplayedBacktank(LocalPlayer player) {
 		List<ItemStack> backtanks = BacktankUtil.getAllWithAir(player);
 		if (!backtanks.isEmpty()) {
-			return backtanks.get(0);
+			return backtanks.getFirst();
 		}
 		return AllItems.COPPER_BACKTANK.asStack();
 	}
