@@ -7,13 +7,13 @@ import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 
-import com.mojang.blaze3d.platform.Window;
 import com.mojang.blaze3d.systems.RenderSystem;
+import com.simibubi.create.AllDataComponents;
 import com.simibubi.create.AllItems;
 import com.simibubi.create.content.equipment.blueprint.BlueprintEntity.BlueprintCraftingInventory;
 import com.simibubi.create.content.equipment.blueprint.BlueprintEntity.BlueprintSection;
 import com.simibubi.create.content.logistics.BigItemStack;
-import com.simibubi.create.content.logistics.filter.AttributeFilterMenu.WhitelistMode;
+import com.simibubi.create.content.logistics.filter.AttributeFilterWhitelistMode;
 import com.simibubi.create.content.logistics.filter.FilterItem;
 import com.simibubi.create.content.logistics.filter.FilterItemStack;
 import com.simibubi.create.content.logistics.item.filter.attribute.ItemAttribute;
@@ -32,22 +32,23 @@ import net.createmod.catnip.data.Iterate;
 import net.createmod.catnip.data.Pair;
 import net.createmod.catnip.gui.element.GuiGameElement;
 import net.minecraft.ChatFormatting;
+import net.minecraft.client.DeltaTracker;
 import net.minecraft.client.Minecraft;
-import net.minecraft.client.gui.Gui;
 import net.minecraft.client.gui.GuiGraphics;
+import net.minecraft.client.gui.LayeredDraw;
 import net.minecraft.client.gui.screens.inventory.tooltip.TooltipRenderUtil;
 import net.minecraft.core.Holder;
 import net.minecraft.core.registries.BuiltInRegistries;
-import net.minecraft.nbt.CompoundTag;
-import net.minecraft.nbt.ListTag;
 import net.minecraft.network.chat.Component;
 import net.minecraft.world.entity.player.Player;
 import net.minecraft.world.inventory.CraftingContainer;
 import net.minecraft.world.item.Item;
+import net.minecraft.world.item.Item.TooltipContext;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.Items;
 import net.minecraft.world.item.TooltipFlag;
 import net.minecraft.world.item.crafting.CraftingRecipe;
+import net.minecraft.world.item.crafting.RecipeHolder;
 import net.minecraft.world.item.crafting.RecipeType;
 import net.minecraft.world.level.GameType;
 import net.minecraft.world.phys.EntityHitResult;
@@ -61,10 +62,11 @@ import net.fabricmc.fabric.api.transfer.v1.storage.base.ResourceAmount;
 import net.fabricmc.fabric.api.transfer.v1.transaction.Transaction;
 
 import io.github.fabricators_of_create.porting_lib.transfer.TransferUtil;
-import io.github.fabricators_of_create.porting_lib.transfer.item.ItemHandlerHelper;
 import io.github.fabricators_of_create.porting_lib.transfer.item.ItemStackHandler;
 
 public class BlueprintOverlayRenderer {
+
+	public static final LayeredDraw.Layer OVERLAY = BlueprintOverlayRenderer::renderOverlay;
 
 	static boolean active;
 	static boolean empty;
@@ -128,7 +130,7 @@ public class BlueprintOverlayRenderer {
 
 		int pavement = info.requiredPavement;
 		while (pavement > 0) {
-			ingredients.add(Pair.of(ItemHandlerHelper.copyStackWithSize(pavementItem, Math.min(64, pavement)),
+			ingredients.add(Pair.of(pavementItem.copyWithCount(Math.min(64, pavement)),
 				info.hasRequiredPavement));
 			pavement -= 64;
 		}
@@ -158,7 +160,7 @@ public class BlueprintOverlayRenderer {
 				.copyWithCount(dce.getPaymentAmount()),
 			!dce.getPaymentItem()
 				.isEmpty() && shopContext.stockLevel() > shopContext.purchases()));
-		for (BigItemStack entry : dce.requestData.encodedRequest.stacks())
+		for (BigItemStack entry : dce.requestData.encodedRequest().stacks())
 			results.add(entry.stack.copyWithCount(entry.count));
 	}
 
@@ -186,7 +188,7 @@ public class BlueprintOverlayRenderer {
 		for (int i = 0; i < player.getInventory().items.size(); i++) {
 			ItemStack item = player.getInventory()
 				.getItem(i);
-			if (item.isEmpty() || !ItemHandlerHelper.canItemStacksStack(item, entry.stack))
+			if (item.isEmpty() || !ItemStack.isSameItemSameComponents(item, entry.stack))
 				continue;
 			itemsPresent += item.getCount();
 		}
@@ -226,7 +228,7 @@ public class BlueprintOverlayRenderer {
 		PlayerInventoryStorage playerInv = PlayerInventoryStorage.of(mc.player);
 
 		int amountCrafted = 0;
-		Optional<CraftingRecipe> recipe = Optional.empty();
+		Optional<RecipeHolder<CraftingRecipe>> recipe = Optional.empty();
 		Map<Integer, ItemStack> craftingGrid = new HashMap<>();
 		ingredients.clear();
 		ItemStackHandler missingItems = new ItemStackHandler(64);
@@ -267,7 +269,7 @@ public class BlueprintOverlayRenderer {
 						recipe = mc.level.getRecipeManager()
 								.getRecipeFor(RecipeType.CRAFTING, craftingInventory, mc.level);
 					ItemStack resultFromRecipe = recipe.filter(r -> r.matches(craftingInventory, mc.level))
-							.map(r -> r.assemble(craftingInventory, mc.level.registryAccess()))
+							.map(r -> r.value().assemble(craftingInventory, mc.level.registryAccess()))
 							.orElse(ItemStack.EMPTY);
 
 					if (resultFromRecipe.isEmpty()) {
@@ -323,7 +325,7 @@ public class BlueprintOverlayRenderer {
 		}
 	}
 
-	public static void renderOverlay(Gui gui, GuiGraphics graphics, float partialTicks, Window window) {
+	public static void renderOverlay(GuiGraphics guiGraphics, DeltaTracker deltaTracker) {
 		Minecraft mc = Minecraft.getInstance();
 		if (mc.options.hideGui || mc.screen != null)
 			return;
@@ -341,16 +343,17 @@ public class BlueprintOverlayRenderer {
 			w += 30;
 		}
 
-		int x = (window.getGuiScaledWidth() - w) / 2;
-		int y = window.getGuiScaledHeight() - 100;
+		int x = (guiGraphics.guiWidth() - w) / 2;
+		int y = guiGraphics.guiHeight() - 100;
 
 		if (shopContext != null) {
-			TooltipRenderUtil.renderTooltipBackground(graphics, x - 2, y + 1, w + 4, 19, 0);
+			TooltipRenderUtil.renderTooltipBackground(guiGraphics, x - 2, y + 1, w + 4, 19, 0, 0x55_000000, 0x55_000000, 0,
+				0);
 
-			AllGuiTextures.TRADE_OVERLAY.render(graphics, window.getGuiScaledWidth() / 2 - 48, y - 19);
+			AllGuiTextures.TRADE_OVERLAY.render(guiGraphics, guiGraphics.guiWidth() / 2 - 48, y - 19);
 			if (shopContext.purchases() > 0) {
-				graphics.renderItem(AllItems.SHOPPING_LIST.asStack(), window.getGuiScaledWidth() / 2 + 20, y - 20);
-				graphics.drawString(mc.font, Component.literal("x" + shopContext.purchases()), window.getGuiScaledWidth() / 2 + 20 + 16,
+				guiGraphics.renderItem(AllItems.SHOPPING_LIST.asStack(), guiGraphics.guiWidth() / 2 + 20, y - 20);
+				guiGraphics.drawString(mc.font, Component.literal("x" + shopContext.purchases()), guiGraphics.guiWidth() / 2 + 20 + 16,
 					y - 20 + 4, 0xff_eeeeee, true);
 			}
 		}
@@ -358,11 +361,11 @@ public class BlueprintOverlayRenderer {
 		// Ingredients
 		for (Pair<ItemStack, Boolean> pair : ingredients) {
 			RenderSystem.enableBlend();
-			(pair.getSecond() ? AllGuiTextures.HOTSLOT_ACTIVE : AllGuiTextures.HOTSLOT).render(graphics, x, y);
+			(pair.getSecond() ? AllGuiTextures.HOTSLOT_ACTIVE : AllGuiTextures.HOTSLOT).render(guiGraphics, x, y);
 			ItemStack itemStack = pair.getFirst();
 			String count = shopContext != null && !shopContext.checkout() || pair.getSecond() ? null
 				: ChatFormatting.GOLD.toString() + itemStack.getCount();
-			drawItemStack(graphics, mc, x, y, itemStack, count);
+			drawItemStack(guiGraphics, mc, x, y, itemStack, count);
 			x += 21;
 		}
 
@@ -373,24 +376,24 @@ public class BlueprintOverlayRenderer {
 		x += 5;
 		RenderSystem.enableBlend();
 		if (invalidShop)
-			AllGuiTextures.HOTSLOT_ARROW_BAD.render(graphics, x, y + 4);
+			AllGuiTextures.HOTSLOT_ARROW_BAD.render(guiGraphics, x, y + 4);
 		else
-			AllGuiTextures.HOTSLOT_ARROW.render(graphics, x, y + 4);
+			AllGuiTextures.HOTSLOT_ARROW.render(guiGraphics, x, y + 4);
 		x += 25;
 
 		// Outputs
 		if (results.isEmpty()) {
-			AllGuiTextures.HOTSLOT.render(graphics, x, y);
+			AllGuiTextures.HOTSLOT.render(guiGraphics, x, y);
 			GuiGameElement.of(Items.BARRIER)
 				.at(x + 3, y + 3)
-				.render(graphics);
+				.render(guiGraphics);
 		} else {
 			for (ItemStack result : results) {
 				AllGuiTextures slot = resultCraftable ? AllGuiTextures.HOTSLOT_SUPER_ACTIVE : AllGuiTextures.HOTSLOT;
 				if (!invalidShop && shopContext != null && shopContext.stockLevel() > shopContext.purchases())
 					slot = AllGuiTextures.HOTSLOT_ACTIVE;
-				slot.render(graphics, resultCraftable ? x - 1 : x, resultCraftable ? y - 1 : y);
-				drawItemStack(graphics, mc, x, y, result, null);
+				slot.render(guiGraphics, resultCraftable ? x - 1 : x, resultCraftable ? y - 1 : y);
+				drawItemStack(guiGraphics, mc, x, y, result, null);
 				x += 21;
 			}
 		}
@@ -400,16 +403,16 @@ public class BlueprintOverlayRenderer {
 			for (boolean count : Iterate.trueAndFalse)
 				for (int i = 0; i < results.size(); i++) {
 					ItemStack result = results.get(i);
-					List<Component> tooltipLines = result.getTooltipLines(mc.player, TooltipFlag.NORMAL);
+					List<Component> tooltipLines = result.getTooltipLines(TooltipContext.of(mc.level), mc.player, TooltipFlag.NORMAL);
 					if (tooltipLines.size() <= 1)
 						continue;
 					if (count) {
 						cycle++;
 						continue;
 					}
-					if ((gui.getGuiTicks() / 40) % cycle != i)
+					if ((mc.gui.getGuiTicks() / 40) % cycle != i)
 						continue;
-					graphics.renderComponentTooltip(gui.getFont(), tooltipLines, mc.getWindow()
+					guiGraphics.renderComponentTooltip(mc.gui.getFont(), tooltipLines, mc.getWindow()
 							.getGuiScaledWidth(),
 						mc.getWindow()
 							.getGuiScaledHeight());
@@ -436,21 +439,20 @@ public class BlueprintOverlayRenderer {
 
 	private static ItemStack[] getItemsMatchingFilter(ItemStack filter) {
 		return cachedRenderedFilters.computeIfAbsent(filter, itemStack -> {
-			CompoundTag tag = itemStack.getOrCreateTag();
-
-			if (AllItems.FILTER.isIn(itemStack) && !tag.getBoolean("Blacklist")) {
+			if (AllItems.FILTER.isIn(itemStack) && !itemStack.getOrDefault(AllDataComponents.FILTER_ITEMS_BLACKLIST, false)) {
 				ItemStackHandler filterItems = FilterItem.getFilterItems(itemStack);
 				return ItemHelper.getNonEmptyStacks(filterItems).toArray(ItemStack[]::new);
 			}
 
 			if (AllItems.ATTRIBUTE_FILTER.isIn(itemStack)) {
-				WhitelistMode whitelistMode = WhitelistMode.values()[tag.getInt("WhitelistMode")];
-				ListTag attributes = tag.getList("MatchedAttributes", net.minecraft.nbt.Tag.TAG_COMPOUND);
-				if (whitelistMode == WhitelistMode.WHITELIST_DISJ && attributes.size() == 1) {
-					ItemAttribute fromNBT = ItemAttribute.loadStatic((CompoundTag) attributes.get(0));
-					if (fromNBT instanceof InTagAttribute inTag) {
+				AttributeFilterWhitelistMode whitelistMode = itemStack.get(AllDataComponents.ATTRIBUTE_FILTER_WHITELIST_MODE);
+				List<ItemAttribute.ItemAttributeEntry> attributes = itemStack.get(AllDataComponents.ATTRIBUTE_FILTER_MATCHED_ATTRIBUTES);
+				//noinspection DataFlowIssue
+				if (whitelistMode == AttributeFilterWhitelistMode.WHITELIST_DISJ && attributes.size() == 1) {
+					ItemAttribute attribute = attributes.getFirst().attribute();
+					if (attribute instanceof InTagAttribute inTag) {
 						List<ItemStack> stacks = new ArrayList<>();
-						for (Holder<Item> holder : BuiltInRegistries.ITEM.getTagOrEmpty(inTag.tag)) {
+						for (Holder<Item> holder : BuiltInRegistries.ITEM.getTagOrEmpty(inTag.tag())) {
 							stacks.add(new ItemStack(holder.value()));
 						}
 						return stacks.toArray(ItemStack[]::new);
